--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.18.1
   carousel_slider: ^4.0.0-nullsafety.0
   easy_dynamic_theme: ^2.0.0
   printing: ^5.11.0
@@ -76,17 +77,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: TimesNewRoman
+      fonts:
+        - asset: fonts/SVN-Times-New-Roman-2.ttf
+    - family: TimesNewRomanBold
+      fonts:
+        - asset: fonts/SVN-TimesNewRoman2-bold.ttf
+    - family: TimesNewRomanItalic
+      fonts:
+        - asset: fonts/SVN-TimesNewRoman2italic.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
