--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   easy_dynamic_theme: ^2.0.0
   printing: ^5.11.0
   google_fonts: ^5.1.0
+  go_router: ^10.0.0
 
 dev_dependencies:
   flutter_test:
