--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   printing: ^5.11.0
   google_fonts: ^5.1.0
   go_router: ^10.0.0
+  provider: ^6.0.5
+  syncfusion_flutter_charts: ^22.1.39
 
 dev_dependencies:
   flutter_test:
